--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       background-color: #0077b6;
       color: white;
       padding: 0.75rem 1.5rem;
-      display: flex;
+      display: fixed;
       justify-content: space-between;
       align-items: center;
       position: fixed;
@@ -30,7 +30,7 @@
     }
 
     .logo img {
-      height: 90px;
+      height: 120px;
       display: block;
     }
 
