Fix header position for improved layout and visibility

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       align-items: center;
       position: fixed;
       width: 100%;
-      top: 20px;
-      left: 20px;
+      top: 0;
+      left: 0;
       z-index: 1000;
       box-sizing: border-box;
     }
