--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Charity: Water Header</title>
   <style>
-    /* Import Proxima Nova (using a similar free alternative via Google Fonts) */
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
     body {
@@ -32,10 +31,9 @@
     .logo img {
       height: 40px;
       display: block;
-      /* Removed position and any hardcoded top/left for better flex alignment */
     }
-      display: block;
-    }
+
+    nav {
       display: flex;
       gap: 1.5rem;
       flex-wrap: nowrap;
@@ -84,16 +82,15 @@
       }
     }
 
-    /* Hero Background Image */
     .hero-background {
       position: relative;
       height: 100vh;
-      background: url('img/4832_Ethiopia_2019_CG-.jpg') no-repeat center 30%/cover; /* shift image down to show face */
+      background: url('img/4832_Ethiopia_2019_CG-.jpg') no-repeat center 30%/cover;
       display: flex;
       justify-content: center;
-      align-items: flex-end; /* move hero box lower */
-      margin-top: 60px; /* offset for fixed header */
-      padding-bottom: 4rem; /* add space at bottom */
+      align-items: flex-end;
+      margin-top: 60px;
+      padding-bottom: 4rem;
     }
 
     .hero {
@@ -105,7 +102,7 @@
       text-align: center;
       padding: 2rem;
       color: #fff;
-      background-color: rgba(0, 0, 0, 0.5); /* overlay for readability */
+      background-color: rgba(0, 0, 0, 0.5);
       border-radius: 10px;
       max-width: 90vw;
       margin-bottom: 0;
@@ -143,7 +140,6 @@
       color: #000;
     }
 
-    /* Content Section */
     .content {
       background: #f0f8ff;
       padding: 4rem 2rem;
@@ -168,7 +164,6 @@
 <body>
   <header>
     <div class="logo">
-      <!-- Correct relative path to logo in img folder -->
       <img src="img/charitywater_logo_horizontal_BlackText.png" alt="Charity Water Logo">
     </div>
     <nav id="nav">
