Increase logo image size for improved visibility

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     }
 
     .logo img {
-      height: 40px;
-      display: block;
+  /* Increased logo size for better visibility */
+  height: 60px; /* was 40px */
+  display: block;
+  /* Optionally, add max-width to prevent overflow */
+  max-width: 180px;
     }
 
     nav {
