Enhance logo visibility with background, padding, and shadow

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
   /* Increased logo size for better visibility */
   height: 60px; /* was 40px */
   display: block;
-  /* Optionally, add max-width to prevent overflow */
   max-width: 180px;
+  /* Make logo more visible with background, padding, and shadow */
+  background: #fff;
+  padding: 6px 14px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.10);
     }
 
     nav {
